Update avatar and OG image, remove Phoenix blog post

--- a/src/app/work/projects/open-source.mdx
+++ b/src/app/work/projects/open-source.mdx
@@ -6,7 +6,7 @@ images: []
 team:
   - name: "Alex Filatov"
     role: "Author & Maintainer"
-    avatar: "/images/avatar.jpg"
+    avatar: "/images/avatar.png"
     linkedIn: "https://www.linkedin.com/in/alexfilatov"
 link: "https://github.com/alexfilatov"
 ---
