--- a/src/app/work/projects/replicant.mdx
+++ b/src/app/work/projects/replicant.mdx
@@ -9,7 +9,7 @@ images:
 team:
   - name: "Alex Filatov"
     role: "Founder"
-    avatar: "/images/avatar.jpg"
+    avatar: "/images/avatar.png"
     linkedIn: "https://www.linkedin.com/in/alexfilatov"
 link: "https://replicant.im"
 ---
