--- a/src/app/work/projects/baristacard.mdx
+++ b/src/app/work/projects/baristacard.mdx
@@ -8,7 +8,7 @@ images:
 team:
   - name: "Alex Filatov"
     role: "Founder"
-    avatar: "/images/avatar.jpg"
+    avatar: "/images/avatar.png"
     linkedIn: "https://www.linkedin.com/in/alexfilatov"
 link: "https://baristacard.com"
 ---
