--- a/src/app/work/projects/cofounder-im.mdx
+++ b/src/app/work/projects/cofounder-im.mdx
@@ -13,7 +13,7 @@ images:
 team:
   - name: "Alex Filatov"
     role: "Founder"
-    avatar: "/images/avatar.jpg"
+    avatar: "/images/avatar.png"
     linkedIn: "https://www.linkedin.com/in/alexfilatov"
 link: "https://cofounder.im"
 ---
