--- a/src/app/work/projects/gymbile.mdx
+++ b/src/app/work/projects/gymbile.mdx
@@ -7,7 +7,7 @@ images:
 team:
   - name: "Alex Filatov"
     role: "Founder & CEO"
-    avatar: "/images/avatar.jpg"
+    avatar: "/images/avatar.png"
     linkedIn: "https://www.linkedin.com/in/alexfilatov"
 link: "https://gymbile.com"
 ---
