--- a/src/app/work/projects/syft.mdx
+++ b/src/app/work/projects/syft.mdx
@@ -7,7 +7,7 @@ images:
 team:
   - name: "Alex Filatov"
     role: "Founding Engineer"
-    avatar: "/images/avatar.jpg"
+    avatar: "/images/avatar.png"
     linkedIn: "https://www.linkedin.com/in/alexfilatov"
 ---
 
