Add Replicant chat section to blog post

--- a/src/app/blog/posts/how-i-built-this-website.mdx
+++ b/src/app/blog/posts/how-i-built-this-website.mdx
@@ -59,6 +59,18 @@ After the initial generation, I made a few tweaks:
 
 The magic portfolio template from Once UI made it easy to customize further through simple TypeScript configuration files.
 
+## Bonus: Chat With My AI Replicant
+
+See that chat icon in the bottom right corner? That's my AI replicant - an AI version of me trained on my experience and resume. You can ask it questions about my work, skills, or projects.
+
+To add this to your own site:
+1. Register at [replicant.im](https://replicant.im)
+2. Train your replicant with your resume and experience
+3. Get your embed code
+4. Tell Claude: "Install this Replicant embed code" and paste it
+
+Claude will handle adding it to your site's layout.
+
 ## Resources
 
 - [Magic Portfolio Template](https://github.com/once-ui-system/magic-portfolio)
