Add cover image to blog post

--- a/src/app/blog/posts/how-i-built-this-website.mdx
+++ b/src/app/blog/posts/how-i-built-this-website.mdx
@@ -2,6 +2,7 @@
 title: "How I Built This Website in 30 Minutes with Claude"
 publishedAt: "2026-01-27"
 summary: "I used Claude AI to create my entire portfolio website from a single prompt. Here's exactly how I did it, so you can do the same."
+image: "/images/blog/how-i-built-this-website/cover.png"
 ---
 
 ## The Challenge
